fix: customize browser scrollbar and enhance dashboard pagination

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,12 @@
 @import './star.css';
 @import './toggle.css';
 @import './dropdown.css';
+@import './scroll-browser.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #f5f4ff;
+}
